--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -11,14 +11,14 @@
                 alt="menu icono" width="30px" height="30px" /></button>
 
         <div class="navbar-container__left--logo">
-            <img src="../../assets/images/logo.png" alt="Logo de Oysho" />
+            <img src="../../../assets/images/logos/logo2.png" alt="K92 Logo" />
         </div>
     </div>
     <div class="navbar-container__middle">
         <div class="navbar-container__middle--input-wrapper">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">
-                    <img src="../../../assets/images/icons/search.svg" alt="search icon" width="15px" height="15px" />
+                    <img src="../../../assets/images/icons/search-icon.png" alt="search icon" width="15px" height="15px" />
                 </span>
                 <input type="text" class="icon" placeholder="Buscar productos...">
             </div>
