--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,11 +1,19 @@
-.site-footer
-{
-  background-color:#26272b;
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap');
+
+.site-footer {
+  //background-color:#26272b;
+  font-family: 'Barlow Condensed', sans-serif;
   padding:45px 0 20px;
-  font-size:15px;
+  font-size:20px;
   line-height:24px;
   color:#737373;
+  backdrop-filter: blur(40px);
+
+
+
 }
+
+
 .site-footer hr
 {
   border-top-color:#bbb;
@@ -17,8 +25,8 @@
 }
 .site-footer h6
 {
-  color:#fff;
-  font-size:16px;
+  color:#A2999E;
+  font-size:25px;
   text-transform:uppercase;
   margin-top:5px;
   letter-spacing:2px
