--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400&display=swap');
 
 .site-footer {
   //background-color:#26272b;
   font-family: 'Barlow Condensed', sans-serif;
   padding:45px 0 20px;
   font-size:20px;
+  font-weight: 300;
   line-height:24px;
   color:#737373;
   backdrop-filter: blur(40px);
@@ -27,6 +28,7 @@
 {
   color:#A2999E;
   font-size:25px;
+  font-weight: 400;
   text-transform:uppercase;
   margin-top:5px;
   letter-spacing:2px
