--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -7,24 +7,17 @@
                 </ul>
             </ng-template>
         </div>
-        <button class="btn btn-lg"><img src="../../assets/images/icons/hamburger-icon.png"
+        <button class="btn btn-lg"><img src="../../assets/images/icons/burger.png"
                 alt="menu icono" width="30px" height="30px" /></button>
 
-        <div class="navbar-container__left--logo">
-            <img src="../../../assets/images/logos/logo2.png" alt="K92 Logo" />
-        </div>
+       
     </div>
     <div class="navbar-container__middle">
-        <div class="navbar-container__middle--input-wrapper">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">
-                    <img src="../../../assets/images/icons/search-icon.png" alt="search icon" width="15px" height="15px" />
-                </span>
-                <input type="text" class="icon" placeholder="Buscar productos...">
-            </div>
+         <div class="navbar-container__middle--logo">
+            <img src="../../../assets/images/logos/k92b.png" alt="K92 Logo" />
         </div>
     </div>
     <div class="navbar-container__right">
-        <a>Carrito</a>
+        <a>Contact</a>
     </div>
 </div>
