--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<p>Nullam dolor justo, sodales id lorem in, fringilla faucibus nisl. 
+    Integer quis mauris id massa porttitor iaculis. Nam sed posuere mi, a imperdiet dolor.
+    Quisque pellentesque at libero id mattis. Phasellus et lacinia nibh. 
+    Aliquam et dolor ac ipsum commodo convallis. Sed nec luctus arcu. 
+    Quisque eu leo quis ex pretium imperdiet in sit amet lacus. 
+    Curabitur at rutrum neque. Donec dapibus eget ante ut lobortis. 
+    Vivamus scelerisque mauris ut massa facilisis, 
+    sed varius leo cursus. Mauris malesuada congue elit aliquam dapibus. 
+    Suspendisse potenti. Aenean egestas urna egestas dolor tempus, vitae lobortis risus accumsan. 
+    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
