--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -3,7 +3,16 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <h6>About</h6>
-          <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+          <p class="text-justify">Nullam dolor justo, sodales id lorem in, fringilla faucibus nisl. 
+            Integer quis mauris id massa porttitor iaculis. Nam sed posuere mi, a imperdiet dolor.
+            Quisque pellentesque at libero id mattis. Phasellus et lacinia nibh. 
+            Aliquam et dolor ac ipsum commodo convallis. Sed nec luctus arcu. 
+            Quisque eu leo quis ex pretium imperdiet in sit amet lacus. 
+            Curabitur at rutrum neque. Donec dapibus eget ante ut lobortis. 
+            Vivamus scelerisque mauris ut massa facilisis, 
+            sed varius leo cursus. Mauris malesuada congue elit aliquam dapibus. 
+            Suspendisse potenti. Aenean egestas urna egestas dolor tempus, vitae lobortis risus accumsan. 
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
         </div>
 
         <div class="col-xs-6 col-md-3">
@@ -31,22 +40,5 @@
       </div>
       <hr>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
-       <a href="#">Scanfcode</a>.
-          </p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
-        </div>
-      </div>
-    </div>
+    
 </footer>
