--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="navbar-container">
     <div class="navbar-container__left">
-        <div class="navbar-container__left--sidebar">
+
+        <h1>K92 AGENCY</h1>
+        <!-- <div class="navbar-container__left--sidebar">
             <ng-template #content>
                 <ul class="navbar-container__left--sidebar-categories" >
                     <li>cat</li>
@@ -8,16 +10,16 @@
             </ng-template>
         </div>
         <button class="btn btn-lg"><img src="../../assets/images/icons/burger.png"
-                alt="menu icono" width="30px" height="30px" /></button>
+                alt="menu icono" width="30px" height="30px" /></button> -->
 
        
     </div>
     <div class="navbar-container__middle">
-         <div class="navbar-container__middle--logo">
+         <!-- <div class="navbar-container__middle--logo">
             <img src="../../../assets/images/logos/k92b.png" alt="K92 Logo" />
-        </div>
+        </div> -->
     </div>
     <div class="navbar-container__right">
-        <a>Contact</a>
+        <a id="bottom">Contact</a>
     </div>
 </div>
