--- a/src/app/pages/artists/artists.component.html
+++ b/src/app/pages/artists/artists.component.html
@@ -1,42 +1,52 @@
 <div class="container">
-  <div class="card card0">
-    <div class="border">
+  <div class="cards card0">
+    <!-- <div class="border"> -->
       <h2>Ebass</h2>
       <div class="icons">
         <a href="https://on.soundcloud.com/FCrEN"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/ebass___/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
         <i class="fas fa-map-marker" aria-hidden="true"><span> Amsterdam</span></i>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
-  <div class="card card1">
-    <div class="border">
+  <div class="cards card1">
+    <!-- <div class="border"> -->
       <h2>Slone</h2>
       <div class="icons">
         <a href="https://soundcloud.com/slone-techno"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/slone_techno/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
         <i class="fas fa-map-marker" aria-hidden="true"><span> Berlin</span></i>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
-  <div class="card card2">
-    <div class="border">
+  <div class="cards card2">
+    <!-- <div class="border"> -->
       <h2>Red Rooms</h2>
       <div class="icons">
         <a href="https://soundcloud.com/slone-techno"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/redroomsberlin/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
         <i class="fas fa-map-marker" aria-hidden="true"><span> Berlin</span></i>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
-  <div class="card card3">
-    <div class="border">
+  <div class="cards card3">
+    <!-- <div class="border"> -->
       <h2>The Sixth Sense</h2>
       <div class="icons">
         <a href="https://soundcloud.com/thesixthsense030"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/__the6thsense__/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
         <i class="fas fa-map-marker" aria-hidden="true"><span> Berlin</span></i>
       </div>
-    </div>
+    <!-- </div> -->
+  </div>
+  <div class="cards card4">
+    <!-- <div class="border"> -->
+      <h2>Westcode</h2>
+      <div class="icons">
+        <a href="https://soundcloud.com/westcode_music"><i class="fab fa-soundcloud" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/westcode._/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+        <i class="fas fa-map-marker" aria-hidden="true"><span> Cordoba</span></i>
+      </div>
+    <!-- </div> -->
   </div>
 </div>
