--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,7 +1,8 @@
   <footer class="site-footer">
     <div class="container">
+      <hr>
       <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <!-- <div class="col-sm-12 col-md-6">
           <h6>About</h6>
           <p class="text-justify">Nullam dolor justo, sodales id lorem in, fringilla faucibus nisl. 
             Integer quis mauris id massa porttitor iaculis. Nam sed posuere mi, a imperdiet dolor.
@@ -13,21 +14,14 @@
             sed varius leo cursus. Mauris malesuada congue elit aliquam dapibus. 
             Suspendisse potenti. Aenean egestas urna egestas dolor tempus, vitae lobortis risus accumsan. 
             Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        </div> -->
+
+        <div class="col-sm-12 col-md-6">
+          <h6>Contact Us</h6>
+          <a>info@k92agency.com</a>
         </div>
 
-        <div class="col-xs-6 col-md-3">
-          <h6>Categories</h6>
-          <ul class="footer-links">
-            <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-            <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-            <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-            <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-            <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-            <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
-          </ul>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
+        <!-- <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
             <li><a href="http://scanfcode.com/about/">About Us</a></li>
@@ -36,7 +30,7 @@
             <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <hr>
     </div>
