--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap');
 
 .navbar-container {
     display: flex;
@@ -14,12 +15,13 @@
     box-shadow: rgb(33 35 38 / 35%) 0px 20px 20px 3px;
 
     &__left {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 40px;
+        //font-family: 'Roboto Condensed', sans-serif;
+        font-family: 'Barlow Condensed', sans-serif;
+        font-size: 20px;
+        padding-left: 100px;
+        color: #737373;
 
-        &--sidebar-categories {
+        /* &--sidebar-categories {
             font-family: 'Roboto Condensed', sans-serif;
             display: flex;
             flex-direction: column;
@@ -31,12 +33,12 @@
             text-transform: uppercase;
             cursor: pointer;
             z-index: 9999999;
-        }
+        } */
 
         
     }
 
-    &__middle {
+/*     &__middle {
 
         &--logo {
             img {
@@ -48,7 +50,7 @@
                 box-shadow: rgb(33 35 38 / 35%) 0px 20px 20px 3px;
             }
         }
-    }
+    } */
 
     &__right {
         padding-right: 100px;
@@ -69,6 +71,11 @@
             }
 
         }
+    }
+
+    #bottom {
+        margin-top: 100%;
+  padding-bottom: 25%;
     }
 }
 
