--- a/src/app/pages/artists/artists.component.scss
+++ b/src/app/pages/artists/artists.component.scss
@@ -1,35 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500&display=swap');
+
 
 .container {
-    height: 100vh;
-    width: 100vw;
-    max-height: 800px;
-    max-width: 1280px;
-    min-height: 600px;
-    min-width: 1000px;
+    //height: 100vh;
+    //width: 100vw;
+    //max-height: 800px;
+    //max-width: 1280px;
+    //min-height: 600px;
+    //min-width: 1000px;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    margin-top: 50px;
     gap: 20px;
   }
   
-  .border {
-    height: 369px;
-    width: 290px;
+/*   .border {
+    height: 250px;
+    width: 300px;
     background: transparent;
     border-radius: 10px;
-    //transition: border 1s;
     position: relative;
   }
   
   .border:hover {
-    border: 1px solid #fff;
-  }
+    border: 1px solid #000000;
+  } */
   
-  .card {
-    height: 379px;
-    width: 300px;
-    background: #808080;
+  .cards {
+    /* height: 379px;
+    width: 300px; */
+    //height: 300px;
+    //width: 250px;
+    height: 250px;
+    width: 320px;
+    background: #000000;
+    //background-size: 300px;
     border-radius: 10px;
     transition: background 0.8s;
     overflow: hidden;
@@ -41,67 +48,84 @@
   }
   
   .card0 {
-    background: url('../../../assets/images/artists/ebass.jpg') center center no-repeat;
-    background-size: 400px;
+    background: url('../../../assets/images/artists/ebass1.jpg');
+    //background-size: 300px;
     filter: grayscale(100%);
   }
   
   .card0:hover {
-    background: url('../../../assets/images/artists/ebass.jpg') left center no-repeat;
-    background-size: 600px;
+    background: url('../../../assets/images/artists/ebass1.jpg');
+    //background-size: 350px;
     filter: grayscale(0);
   }
   
   .card1 {
-    background: url('../../../assets/images/artists/slone3.jpg') center center no-repeat;
-    background-size: 400px;
+    background: url('../../../assets/images/artists/slone3.jpg');
+    background-size: 300px;
     filter: grayscale(100%);
   }
   
   .card1:hover {
-    background: url('../../../assets/images/artists/slone3.jpg') left center no-repeat;
-    background-size: 600px;
+    background: url('../../../assets/images/artists/slone3.jpg');
+    background-size: 300px;
     filter: grayscale(0);
   }
   
   .card2 {
-    background: url('../../../assets/images/artists/redrooms.jpg') center center no-repeat;
-    background-size: 400px;
+    background: url('../../../assets/images/artists/redrooms1.jpg');
+    background-size: 320px;
     filter: grayscale(100%);
   }
   
   .card2:hover {
-    background: url('../../../assets/images/artists/redrooms.jpg') left center no-repeat;
-    background-size: 600px;
+    background: url('../../../assets/images/artists/redrooms1.jpg');
+    background-size: 320px;
     filter: grayscale(0);
   }
 
   .card3 {
-    background: url('../../../assets/images/artists/6thsense.jpg') center center no-repeat;
-    background-size: 470px;
+    background: url('../../../assets/images/artists/6thsense.jpg') center;
+    background-size: 300px;
     filter: grayscale(100%);
   }
   
   .card3:hover {
-    background: url('../../../assets/images/artists/6thsense.jpg') left center no-repeat;
-    background-size: 600px;
+    background: url('../../../assets/images/artists/6thsense.jpg') center ;
+    background-size: 300px;
+    filter: grayscale(0);
+  }
+
+  .card4 {
+    background: url('../../../assets/images/artists/westcode2.jpg');
+    background-size: 320px;
+    filter: grayscale(100%);
+  }
+  
+  .card4:hover {
+    background: url('../../../assets/images/artists/westcode2.jpg') ;
+    background-size: 320px;
     filter: grayscale(0);
   }
   
-  .card0:hover h2, .card1:hover h2, .card2:hover h2, .card3:hover h2 {
+  .card0:hover h2, .card1:hover h2, .card2:hover h2, .card3:hover h2, .card4:hover h2{
     opacity: 1;
   }
   
-  .card0:hover .fa, .card1:hover .fa, .card2:hover .fa, .card3:hover .fa {
+  .card0:hover .fa, .card1:hover .fa, .card2:hover .fa, .card3:hover .fa, .card4:hover .fa {
     opacity: 1;
   }
   
   h2 {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-weight: 400;
     color: #fff;
+    -webkit-text-stroke: 1px black;
     margin: 20px;
     opacity: 0;
     transition: opacity 1s;
+    position: absolute;
+    top: 20px;
+    left: 20px;
   }
   
   .fa {
@@ -113,9 +137,11 @@
     position: absolute;
     fill: #fff;
     color: #fff;
-    height: 130px;
-    top: 226px;
+    //height: 130px;
+    //top: 205px;
+    top: 160px;
     left:20px;
+    gap: 5px;
     width: 150px;
     display: flex;
     flex-direction: column;
@@ -131,133 +157,3 @@
     color: #9c9c9c;
   }
 
-
-
-
-/* .card-container {
-  height: 100vh;
-  width: 100vw;
-  max-height: 800px;
-  max-width: 1280px;
-  min-height: 600px;
-  min-width: 1000px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 0 auto;
-
-  h2 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: white;
-    margin: 20px;
-    opacity: 0;
-    transition: opacity 1s;
-  }
-
-  
-
-  .icons {
-    position: absolute;
-    fill: #fff;
-    color: #fff;
-    height: 130px;
-    top: 226px;
-    width: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    &fa {
-        opacity: 0;
-        transition: opacity 1s;
-      }
-  }
-
-  &__card {
-    height: 379px;
-    width: 300px;
-    background: grey;
-    border-radius: 10px;
-    transition: background 0.8s;
-    overflow: hidden;
-    background: black;
-    box-shadow: 0 70px 63px -60px #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-
-    &--1 {
-      background: url("https://i.pinimg.com/736x/8f/a0/51/8fa051251f5ac2d0b756027089fbffde--terry-o-neill-al-pacino.jpg")
-        center center no-repeat;
-      background-size: 300px;
-
-      &:hover {
-        background: url("https://i.pinimg.com/736x/8f/a0/51/8fa051251f5ac2d0b756027089fbffde--terry-o-neill-al-pacino.jpg")
-          left center no-repeat;
-        background-size: 600px;
-
-        h2 {
-          opacity: 1;
-        }
-
-        .fa {
-          opacity: 1;
-        }
-      }
-    }
-    &--2 {
-      background: url("https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg")
-        center center no-repeat;
-      background-size: 300px;
-
-      &:hover {
-        background: url("https://i.pinimg.com/originals/28/d2/e6/28d2e684e7859a0dd17fbd0cea00f8a9.jpg")
-          left center no-repeat;
-        background-size: 600px;
-
-        h2 {
-          opacity: 1;
-        }
-
-        .fa {
-          opacity: 1;
-        }
-      }
-    }
-    &--3 {
-      background: url("https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg")
-        center center no-repeat;
-      background-size: 300px;
-
-      &:hover {
-        background: url("https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg")
-          left center no-repeat;
-        background-size: 600px;
-
-        h2 {
-          opacity: 1;
-        }
-
-        .fa {
-          opacity: 1;
-        }
-      }
-    }
-
-    &--border {
-      height: 369px;
-      width: 290px;
-      background: transparent;
-      border-radius: 10px;
-      transition: border 1s;
-      position: relative;
-
-      &:hover {
-        border: 1px solid white;
-      }
-    }
-  }
-}
- */
